fixed social tags, fixed blog list sizing on iphone 8

--- a/src/components/flat-card.css
+++ b/src/components/flat-card.css
@@ -1,8 +1,8 @@
 .flat-card {
    display: flex;
+   flex-direction: column;
    position: relative;
    width: 70vw;
-   height: 12vh;
 }
 
 .flat-card:hover {
@@ -10,17 +10,27 @@
    box-shadow: 0 1px 1px rgb(148, 148, 148), 0 4px 4px rgb(148, 148, 148);
 }
 
+.flat-card img {
+   position: relative;
+   height: 200px;
+   float: left;
+}
+
 .flat-card__text-div {
    text-decoration: none;
+
+   position: relative;
    font-size: 1.3rem;
    margin-left: 10vw;
+   margin-bottom: 2vh;
 }
 
 .flat-card__meta-span {
    display: flex;
-   position: absolute;
+   position: relative;
    bottom: 5px;
    font-size: 1rem;
+   margin-left: 10vw;
 }
 
 .flat-card__meta-span--h6 {
@@ -35,6 +45,7 @@
 @media (max-width: 450px) {
    .flat-card {
       width: 90vw;
+
       box-shadow: 0 2px 2px #e6e6e6, 0 2px 4px #e6e6e6;
    }
 
@@ -42,12 +53,13 @@
       text-decoration: none;
       font-size: 0.9rem;
       margin-left: 3px;
+      margin-bottom: 10px;
    }
 
    .flat-card__meta-span {
       display: flex;
-      position: absolute;
       bottom: 0;
-      font-size: 1rem;
+      margin-left: 3px;
+      font-size: 0.9rem;
    }
 }
