--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -2,6 +2,7 @@
    position: relative;
    margin: 0 auto;
    margin-top: 20px;
+   padding-bottom: 40px;
    width: 85vw;
 }
 
