--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -27,7 +27,7 @@
 
 .blog-post__preformat {
    padding: 0.25% 0 0.25% 3%;
-   width: 70vw;
+   width: 55vw;
    background-color: rgb(247, 238, 238);
 }
 
